fix CSS styles for light and dark mode

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -13,6 +13,34 @@ img:hover {
 	column-gap: 1.5rem;
 }
 
+.opinion {
+        display: flex; /* this is so that the percentage appears after the phrase, on the same line */
+        cursor: pointer;
+        justify-content: space-between;
+        border-bottom: 1px solid black;
+}
+
+.opinion:hover {
+        font-weight:bold;
+        background-color: #00ff00;
+}
+
+@media (prefers-color-scheme: dark) {
+	.opinion:hover {
+                background-color: #007700;
+	}
+        .opinion {
+                border-bottom: 1px solid grey;
+        }
+}
+
+@media (prefers-color-scheme: light) {
+	.opinion:hover {
+                background-color: #00ffff;
+	}
+}
+
+
 .resource {
 	padding: 0.75rem 1.5rem;
 	border-radius: 0.5rem;
