--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
@@ -11,17 +11,21 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+}*/
+
+h1 {
+  margin: 0;
 }
 
 body {
 	margin: 0;
 }
 
-#app {
+/*#app {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-}
+}*/
 
 header {
 	display: flex;
@@ -48,12 +52,12 @@ header a:hover {
 }
 
 main {
-	flex: auto;
+	/*flex: auto;
 	display: flex;
 	align-items: center;
 	max-width: 1280px;
 	margin: 0 auto;
-	text-align: center;
+	text-align: center;*/
 }
 
 @media (max-width: 639px) {
@@ -64,7 +68,14 @@ main {
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		color: #ccc;
+		color: #ddd;
 		background-color: #1a1a1a;
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	:root {
+		color: #000000;
+		background-color: #ffffff;
 	}
 }
